--- a/.github/index.html
+++ b/.github/index.html
@@ -172,7 +172,8 @@
                 <button type="submit" class="subscribe">Subscribe</button>
             </form>
         </section>
-        <div>
+        <section class="backed-by-badge">
+        <div class="class">
             <h2 class = "another-titles">Backed by</h2 >
             <ul class="backed-by">
                 <li class="company-second">
@@ -233,6 +234,7 @@
                 </li>
             </ul>
         </div>
+        </section>
         <section>
             <h2 class = "Tools-title">Press</h2>
             <div class="blue-cont">
@@ -278,6 +280,7 @@
         </section>
         <section>
             <h2 class = "Tools-title">Podсasts</h2>
+            <div class="contauner">
             <div class="cont">
                 <img src="img/Rectangle 39403.png" alt="" class="rectangle">
                 <p class="understanding">Understanding DAOs with Yury Lifshits</p>
@@ -285,6 +288,8 @@
                 <p class="anthony">Anthony Pompliano</p>
                 <a href="" class="listen">Listen <img src="img/Strelka.svg" alt="Strelka"></a>
             </div>
+            </div>
+            <div class="contauner">
             <div class="cont">
                 <img src="img/Rec.png" alt="" class="rectangle">
                 <p class="understanding">Everything You Need to Know About DAOs with Yury Lifshits from Superdao</p>
@@ -292,6 +297,8 @@
                 <p class="anthony">Josh Gordon</p>
                 <a href="" class="watch">Watch <img src="img/Strelka.svg" alt="Strelka"></a>
             </div>
+        </div>
+            <div class="contauner">
             <div class="cont">
                 <img src="img/tan.png" alt="" class="rectangle">
                 <p class="understanding">Yury Lifshits - Superdao: The “Shopify” for DAOs</p>
@@ -299,6 +306,7 @@
                 <p class="anthony">Andrew Stainwold</p>
                 <a href="" class="listen">Listen <img src="img/Strelka.svg" alt="Strelka"></a>
             </div>
+        </div>
         </section>
         <div class="see-all-div">
             <a href="" class="see-all">See all <img src="img/Strelka.svg" alt="Strelka"></a>
