--- a/.github/grid.html
+++ b/.github/grid.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
-    
 </head>
 <body>
 <header>
@@ -45,30 +44,17 @@
         </svg>
     </button>
 </header>
-<section>
-    <div class="root">
-        <div class="grid">
-          <div class="grid-picture"></div>
-          <div class="grid-picture"></div>
-          <div class="grid-picture"></div>
-          <div class="grid-picture"></div>
-          <div class="grid-picture"></div>
-          <div class="grid-picture"></div>
-          <div class="grid-picture"></div>
-          <div class="grid-picture"></div>
-          <div class="grid-picture"></div>
-          <div class="grid-picture"></div>
-          <div class="grid-picture"></div>
-          <div class="grid-picture"></div>
-          <div class="grid-picture"></div>
-          <div class="grid-picture"></div>
-          <div class="grid-picture"></div>
-          <div class="grid-picture"></div>
-          <div class="grid-picture"></div>
-          <div class="grid-picture"></div>
-          <div class="grid-picture"></div>
-          <div class="grid-picture"></div>
-        </div>
+<section class="section-gridder">
+  <div class="container-grid">
+      <div class="pic pic1"></div>
+      <div class="pic pic2"></div>
+      <div class="pic pic3"></div>
+      <div class="pic pic4"></div>
+      <div class="pic pic5"></div>
+      <div class="pic pic6"></div>
+      <div class="pic pic7"></div>
+      <div class="pic pic8"></div>
+      <div class="pic pic9"></div>
     </div>
 </section>
 <section>
@@ -82,23 +68,23 @@
             </ul>
           </div>
           <div class="main-graph graph1">
-            <img  src="img/magicpattern-svg-chart-1703147087172.png"  width="200" height="150"  alt=img/magicpattern-svg-chart-1703147087172.png/>
+            <img  src="img/magicpattern-svg-chart-1703147087172.png"  width="770" height="150"  alt=img/magicpattern-svg-chart-1703147087172.png/>
           </div>
           <div class="main-graph graph2">
-            <img src="img/magicpattern-svg-chart-1703147087172.png" width="200" height="150" alt="" />
+            <img src="img/magicpattern-svg-chart-1703147087172.png" width="250" height="150" alt="" />
           </div>
           <div class="main-graph graph3">
-            <img src="img/magicpattern-svg-chart-1703147087172.png" width="200" height="150" alt=""/>
+            <img src="img/magicpattern-svg-chart-1703147087172.png" width="250" height="150" alt=""/>
           </div>
 
           <div class="main-graph graph4">
-            <img src="img/magicpattern-svg-chart-1703147087172.png" width="200" height="150" alt=""/>
+            <img src="img/magicpattern-svg-chart-1703147087172.png" width="250" height="150" alt=""/>
           </div>
           <div class="main-graph graph5">
-            <img src="img/magicpattern-svg-chart-1703147087172.png" width="200" height="150" alt="" />
+            <img src="img/magicpattern-svg-chart-1703147087172.png" width="380" height="150" alt="" />
           </div>
           <div class="main-graph graph6">
-            <img src="img/magicpattern-svg-chart-1703147087172.png" width="200" height="150"alt=""/>
+            <img src="img/magicpattern-svg-chart-1703147087172.png" width="380" height="150"alt=""/>
           </div>
         </div>
       </section>
