--- a/.github/demo.html
+++ b/.github/demo.html
@@ -35,80 +35,39 @@
     </button>
 </header>
 <main>
-  <section class="section-gridder">
-    <div class="container-grid">
-        <div class="pic pic1"></div>
-        <div class="pic pic2"></div>
-        <div class="pic pic3"></div>
-        <div class="pic pic4"></div>
-        <div class="pic pic5"></div>
-        <div class="pic pic6"></div>
-        <div class="pic pic7"></div>
-        <div class="pic pic8"></div>
-        <div class="pic pic9"></div>
-      </div>
-  </section>
-  <section>
-      <section class="grid-body1">
-          <div class="graphics">
-            <div class="main-graph sigepanel">
-              <ul class="side">
-                <li><a href="" class="link">Link</a></li>
-                <li><a href="" class="link">Link</a></li>
-                <li><a href="" class="link">Link</a></li>
-              </ul>
-            </div>
-            <div class="main-graph graph1">
-              <img  src="img/magicpattern-svg-chart-1703147087172.png"  width="770" height="150"  alt=img/magicpattern-svg-chart-1703147087172.png/>
-            </div>
-            <div class="main-graph graph2">
-              <img src="img/magicpattern-svg-chart-1703147087172.png" width="250" height="150" alt="" />
-            </div>
-            <div class="main-graph graph3">
-              <img src="img/magicpattern-svg-chart-1703147087172.png" width="250" height="150" alt=""/>
-            </div>
-  
-            <div class="main-graph graph4">
-              <img src="img/magicpattern-svg-chart-1703147087172.png" width="250" height="150" alt=""/>
-            </div>
-            <div class="main-graph graph5">
-              <img src="img/magicpattern-svg-chart-1703147087172.png" width="380" height="150" alt="" />
-            </div>
-            <div class="main-graph graph6">
-              <img src="img/magicpattern-svg-chart-1703147087172.png" width="380" height="150"alt=""/>
-            </div>
+    <div class="two-sides-card">
+        <div class="two-sides-card-second">
+          <div class="two-sides-card-font">
+            <img src="img/ФВФ.jpg" alt="Перед">
           </div>
-        </section>
-        <section class="section-grid">
-          <div class="grid-buttons">
-            <div class="grid-img_item">
-              <img src="img/10984913.jpg" alt="" class="gallery-img itemm1"/>
-              <a href="" class="link_gallery itemm2">Link</a>
-            </div>
-            <div class="grid-img_item">
-              <img src="img/y.jpg" alt="" class="gallery-img itemm1" />
-              <a href="" class="link_gallery itemm2">Link</a>
-            </div>
-            <div class="grid-img_item">
-              <img src="img/yellow-interior-01-lg.jpg" alt="" class="gallery-img itemm1"/>
-              <a href="" class="link_gallery itemm2">Link</a>
-            </div>
-            <div class="grid-img_item">
-              <img src="img/2-2a9e9d2000f0a5b89a2aea9032536e90.jpeg" alt="" class="gallery-img itemm1" />
-              <a href="" class="link_gallery itemm2">Link</a>
-            </div>
-            <div class="grid-img_item">
-              <img src="img/scale_1200.jfif" alt="" class="gallery-img itemm1"/>
-              <a href="" class="link_gallery itemm2">Link</a>
-            </div>
-            <div class="grid-img_item">
-              <img src="img/1695634329_priroda-club-p-tsveti-zheltogo-tsveta-instagram-56.jpg" alt="" class="gallery-img itemm1"/>
-              <a href="" class="link_gallery itemm2">Link</a>
-            </div>
-  </section>
+          <div class="two-sides-card-back">
+            <img src="img/ВФЫВЫ.jpg" alt="Зад">
+          </div>
+        </div>
+      </div>
+      <div class="queue">
+        <img src="img/2276589.png" alt="Image 1" class="mega-image">
+        <img src="img/3362029.png" alt="Image 2" class="mega-image">
+        <img src="img/4341022.png" alt="Image 3" class="mega-image">
+      </div>
 </main>
-
 <footer>
+    <div class="footer-div">
+        <a href="index.html" class="svg-div">
+            <picture>
+                <source srcset="img/Logo.svg" media="(min-width: 1200px)">
+                <img src="img/Logo-first.svg">
+            </picture>
+        </a>
+        <a href="grid.html" class="about-second-grid">Grid</a>
+          <a href="" class="about-second">About</a>
+          <a href="" class="Jobs">Jobs</a>
+          <a href="" class="Legal">Legal</a>
+          <a href="" class="twitter"><img src="img/Frame 5609.svg" alt="Twitter"></a>
+          <a href="" class="telegram-div"><img src="img/Frame.svg" alt="Telegram"></a>
+          <a href="" class="youtube-div"><img src="img/Frame (1).svg" alt="Youtube"></a>
+          <a href="" class="discord-div"><img src="img/Frame 5617.svg" alt="Discord"></a>
+    </div>
     <a href=""><svg width="140" height="24" viewBox="0 0 140 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="image-footer">
         <path d="M51.8936 6.83594C55.0665 6.83594 57.2056 8.10154 57.2056 10.5793V11.1675H54.3535V10.5793C54.3535 9.58105 53.4266 9.08194 51.8936 9.08194H51.5728C50.0041 9.08194 49.1128 9.5454 49.1128 10.2228V10.401C49.1128 11.221 49.8259 11.4527 52.7136 11.934C55.9756 12.5222 57.4195 13.4848 57.4195 15.4991V15.6773C57.4195 17.6916 55.6013 19.1355 51.9471 19.1355H51.6084C47.9185 19.1355 46.0469 17.6738 46.0469 15.1961V14.6435H48.8989V15.1961C48.8989 16.4617 49.8793 16.8716 51.6262 16.8716H51.9471C53.6048 16.8716 54.5318 16.4795 54.5318 15.713V15.5526C54.5318 14.7861 53.6761 14.4474 50.8063 13.9839C47.7938 13.5026 46.2251 12.5935 46.2251 10.5436V10.3119C46.2251 8.10154 48.2572 6.83594 51.5728 6.83594H51.8936Z" fill="white"/>
         <path d="M66.138 18.9569V17.7626H65.7636C65.2111 18.6004 64.195 19.1352 62.769 19.1352H62.4659C60.2556 19.1352 59.0078 17.9409 59.0078 15.3384V9.8125H61.8599V14.8214C61.8599 16.087 62.5194 16.7822 63.8385 16.7822H64.1415C65.4606 16.7822 66.138 16.087 66.138 14.8214V9.8125H68.99V18.9569H66.138Z" fill="white"/>
@@ -133,6 +92,7 @@
         </svg>
         </a>
     <ul class="list-footer">
+        <li class="footer-list-first"><a href="grid.html" class="about-grid">Grid</a></li>
         <li class="footer-list-first"><a href="" class="about">About</a></li>
         <li class="footer-list-second"><a href="" class="about">Jobs</a></li>
         <li class="footer-list-third"><a href="" class="about">Legal</a></li>
