--- a/.github/index.html
+++ b/.github/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="" class="logotip">
+        <a href="index.html" class="logotip">
             <picture>
                 <source srcset="img/Logo.svg" media="(min-width: 1200px)">
                 <img src="img/Logo-first.svg">
@@ -74,13 +74,13 @@
             <h2 class = "Design-title">Designed 
                 for the full journey</h2>
             <ul class="list-special">
-                <li class="third-list-special">Organisation design </li>
-                <li>Smart contract development</li>
-                <li>Fundraising</li>
-                <li class="four-list-special">Launch marketing</li>
-                <li class="second-list-special">Member onboarding</li>
-                <li>Contributor management</li>
-                <li>DAO operations</li>
+                <li class="specificly">Organisation design </li>
+                <li class="specificly">Smart contract development</li>
+                <li class="specificly">Fundraising</li>
+                <li class="specificly">Launch marketing</li>
+                <li class="specificly">Member onboarding</li>
+                <li class="specificly">Contributor management</li>
+                <li class="specificly">DAO operations</li>
             </ul>
         </section>
         <section>
@@ -429,10 +429,12 @@
     </main>
     <footer>
         <div class="footer-div">
-            <picture class="svg-div">
-                <source srcset="img/Logo.svg" media="(min-width: 1200px)">
-                <img src="img/Logo-first.svg">
-            </picture>
+            <a href="index.html" class="svg-div">
+                <picture>
+                    <source srcset="img/Logo.svg" media="(min-width: 1200px)">
+                    <img src="img/Logo-first.svg">
+                </picture>
+            </a>
             <a href="grid.html" class="about-second-grid">Grid</a>
               <a href="" class="about-second">About</a>
               <a href="" class="Jobs">Jobs</a>
