Тестирование для валидатора

--- a/.github/index.html
+++ b/.github/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <header>
-        <a href="index.html" class="logotip" alt="Logotip">
+        <a href="index.html" class="logotip">
             <picture>
-                <source srcset="img/Logo.svg" media="(min-width: 1200px)" alt="Logotip">
+                <source srcset="img/Logo.svg" media="(min-width: 1200px)">
                 <img src="img/Logo-first.svg" alt="Logotip">
             </picture>
             <span class="sr-only">Главная</span>
@@ -245,8 +245,8 @@
                 <h2 class ="Weekly-digest">Weekly digest</h2>
                 <p class="news">Latest news in DAOs and Web3</p>
                 <div class="divich">
-                    <label>
-                        <input type="email" placeholder="Your email" name="email" id="email" class="input-email" required>
+                    <label for="email" class="input-email">
+                        <input type="email" placeholder="Your email" name="email" id="email">
                     </label>
                     <button type="submit" class="subscribe">Subscribe</button>
                 </div>
@@ -432,9 +432,9 @@
     </main>
     <footer>
         <div class="footer-div">
-            <a href="index.html" class="svg-div" alt="Logotip">
+            <a href="index.html" class="svg-div">
                 <picture>
-                    <source srcset="img/Logo.svg" media="(min-width: 1200px)" alt="Logotip">
+                    <source srcset="img/Logo.svg" media="(min-width: 1200px)">
                     <img src="img/Logo-first.svg" alt="Logotip">
                 </picture>
                 <span class="sr-only">Главная</span>
