--- a/.github/index.html
+++ b/.github/index.html
@@ -8,6 +8,7 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="#main" class="skip-link">Skip to main</a>
     <header>
         <a href="index.html" class="logotip">
             <picture>
@@ -36,7 +37,7 @@
             Login
         </button>
     </header>
-    <main>
+    <main id="main">
         <section style="margin: 0 16px;">
             <h1 class = "main-title">The easiest way
                 to start a DAO</h1>
@@ -245,9 +246,7 @@
                 <h2 class ="Weekly-digest">Weekly digest</h2>
                 <p class="news">Latest news in DAOs and Web3</p>
                 <div class="divich">
-                    <label for="email" class="input-email">
-                        <input type="email" placeholder="Your email" name="email" id="email">
-                    </label>
+                    <input type="email" placeholder="Your email" name="email" id="email" class="input-email">
                     <button type="submit" class="subscribe">Subscribe</button>
                 </div>
             </form>
