Исправление замеченной ошибки

--- a/.github/index.html
+++ b/.github/index.html
@@ -128,7 +128,7 @@
         </section>
         <section>
             <h2 class = "Works-with">Works with</h2>
-            <ul class="list-project">
+            <ul class="list-project-eter">
                 <li class="work-with-text"><img src="img/Frame 5583.svg" alt="Ethereum"> <p> Ethereum</p></li>
                 <li class="work-with-text"><img src="img/Frame 5502.svg" alt="Polygon"><p> Polygon</p></li>
                 <li class="work-with-text"><img src="img/Frame 5584.svg" alt="Gnosis Safe"><p>Gnosis Safe</p></li>
